[package]
name = "twitch-rs"
description = "Rust Wrapper for the Twitch Helix API"
categories = ["api-bindings"]
keywords = ["twitch", "helix", "api"]
repository = "https://github.com/Cryma/twitch-rs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Fabian Vowie <crymaprivat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
